# game-v1

./: .gitignore  Cargo.toml  Readme.md  bacon.toml  install-linux.sh  install-wasm.sh  install.sh  run-debug-diagrams.sh  run-wasm.sh  run.sh  rust-toolchain.toml
.cargo/: config.toml
assets/3d/: attribution.txt
assets/3d/3D_FRACTURE/: Airplanes(1).glb  Airplanes(2).glb  Airplanes.glb  Apartment Buildings(1).glb  Apartment Buildings(2).glb  Apartment Buildings(4).glb  Apartment Buildings(6).glb  Apartment Buildings(7).glb  Apartment Buildings(8).glb  Apartment Buildings(9).glb  Apartment Buildings.glb  Aztec Pyramids(1).glb  Aztec Pyramids.glb  Billboards(1).glb  Billboards.glb  Brickwall.glb  Bus Stops.glb  Cannons.glb  Cartoon Space Rockets(1).glb  Cartoon Space Rockets.glb  Carts and Wagons(1).glb  Carts and Wagons(2).glb  Carts and Wagons.glb  Catapult.glb  Chairs.glb  Churches(1).glb  Churches(3).glb  Churches(4).glb  Churches(5).glb  Churches.glb  Construction Barriers.glb  Container(1).glb  Container(2).glb  Container(3).glb  Container(4).glb  Container(5).glb  Container.glb  Convenience Stores(2).glb  Convenience Stores(3).glb  Convenience Stores.glb  (+74 more)
assets/3d/ANGLE_DISSOLVE/: Airplanes(1).glb  Airplanes(2).glb  Airplanes.glb  Apartment Buildings(1).glb  Apartment Buildings(2).glb  Apartment Buildings(3).glb  Apartment Buildings(4).glb  Apartment Buildings(5).glb  Apartment Buildings(6).glb  Apartment Buildings(7).glb  Apartment Buildings(8).glb  Apartment Buildings(9).glb  Apartment Buildings.glb  Aztec Pyramids(1).glb  Aztec Pyramids.glb  Billboards(1).glb  Billboards.glb  Brickwall.glb  Bus Stops.glb  Cannons.glb  Cartoon Space Rockets(1).glb  Cartoon Space Rockets.glb  Carts and Wagons(1).glb  Carts and Wagons(2).glb  Carts and Wagons.glb  Catapult.glb  Chairs.glb  Churches(1).glb  Churches(2).glb  Churches(3).glb  (+93 more)
assets/ANGLE_DISSOLVE/: Apartment Buildings(1).glb  Apartment Buildings(2).glb  Apartment Buildings(3).glb  Apartment Buildings(4).glb  Apartment Buildings(5).glb  Apartment Buildings(6).glb  Apartment Buildings(7).glb  Apartment Buildings(8).glb  Apartment Buildings(9).glb  Apartment Buildings.glb  Brickwall.glb  Bus Stops.glb  Cannons.glb  Catapult.glb  Chairs.glb  Churches(1).glb  Churches(2).glb  Churches(3).glb  Churches(4).glb  Churches(5).glb  Churches.glb  Construction Barriers.glb  Desert Houses(1).glb  Desert Houses(2).glb  Desert Houses.glb  Medieval Houses(1).glb  Medieval Houses(2).glb  Medieval Houses(3).glb  Medieval Houses.glb  Medieval Walls(1).glb  Medieval Walls(2).glb  Medieval Walls(3).glb  Medieval Walls.glb  Modern Houses(1).glb  Modern Houses.glb  Railway Tracks.glb  Road Blocks.glb  Roman Buildings(1).glb  Skyscrapers(1).glb  Skyscrapers(2).glb  (+16 more)
assets/ORIGINAL/: Apartment Buildings(1).glb  Apartment Buildings(2).glb  Apartment Buildings(5).glb  Apartment Buildings(8).glb  Apartment Buildings(9).glb  Cannons.glb  Catapult.glb  Churches(4).glb  Churches.glb  Construction Barriers.glb  Desert Houses(2).glb  Medieval Houses(2).glb  Medieval Houses.glb  Medieval Walls(3).glb  Medieval Walls.glb  Modern Houses(1).glb  Modern Houses.glb  Road Blocks.glb  Roman Buildings(1).glb  Skyscrapers(2).glb  Skyscrapers.glb  Tanks and Armored Vehicle(1).glb  Tanks and Armored Vehicle(2).glb  Tanks and Armored Vehicle(3).glb  Trees(1).glb  Trees.glb  Water Towers(1).glb  Water Towers(2).glb
assets/sound/: attribution.txt  convert.sh  do-convert-one-normalize-plm.sh  do-convert-one.sh
lib/bevy_debug_lines-master/: Cargo.toml
lib/game_logic/: Cargo.toml
lib/game_terrain/: Cargo.toml
lib/graphics_base/: Cargo.toml
src/: assets.rs  audio.rs  camera_extra.rs  camera_flying.rs  flying_camera.rs  game_assets.rs  height.rs  lib.rs  lines-demo.rs  main.rs  main3.rs  menu.rs  piramida.rs  planet.rs  player.rs  raycast.rs  terrain.rs  triangle.rs  utils.rs
src/gameplay/: bullet.rs  bullet_physics.rs  events.rs  minimap.rs  mod.rs  tank.rs  tank_ai.rs  tank_control.rs  tank_kbd_shortcuts.rs  tank_ui copy.rs  tank_ui.rs
src/oct_tree/: bounding_box.rs  data_point.rs  mod.rs  octree.rs  octree_node.rs
(+99 files in other folders)
