[package]
name = "game-v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["tonemapping_luts",  "dynamic_linking", "bevy_gltf"] }
bevy-inspector-egui = "0.20"
bevy_egui = "0.22.0"
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.8.0"
bevy_rapier3d = { version = "0.22", features = [ "simd-stable", "debug-render-3d" ] }
bevy_hanabi = "0.7"

# [features]
# dev = [
#     "bevy/bevy_dylib",
# ]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Add this to your Cargo.toml
[profile.dev.package.bevy_rapier3d]
opt-level = 3

# Add this to your Cargo.toml
[profile.release]
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[profile.release-wasm]
debug = false
inherits = "release"
lto = true
opt-level = 's'
panic = "abort"
strip = true


[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"