[package]
name = "game-v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm = []

[dependencies]
bevy = { version = "0.11.3", features = [
    "tonemapping_luts",  
    "bevy_gltf",
    "jpeg", "png",
    "dynamic_linking",
    "bevy_sprite", "bevy_asset",
     "bevy_core_pipeline", "bevy_render", "bevy_pbr",
] }
bevy-inspector-egui = "0.20"
bevy_egui = "0.22.0"
bevy_rapier3d = { version = "0.22", features = [ "simd-stable", "debug-render-3d" ] }
bevy_hanabi = "0.7"
bevy_screen_diagnostics = "0.3"
bevy_atmosphere = "0.7"
smart-default = "0.7.1"
bevy_mod_raycast = "0.14.1"
# bevy-rust-gpu = { git = "https://github.com/Bevy-Rust-GPU/bevy-rust-gpu", tag = "v0.5.0" }
bevy_prototype_debug_lines = {path="./lib/bevy_debug_lines-master"}
# bevy_prototype_debug_lines = {path="./lib/bevy_debug_lines-0281c92551fc129321bc28789e9f59a4047ebea4"}
simdnoise = "3.1.6"
# noise = "0.8.2"
rand = "0.8.5"
rayon = "1.8.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1

[profile.dist]
inherits = "release"

[profile.release-wasm]
inherits = "release"
debug = false
lto = false
opt-level = 's'
panic = "abort"
strip = true
